<!--
  ~ Copyright (c) 2017. Antti Myllykoski.
  -->

<resources>
    <string name="app_name">EarthQuakes</string>
    <string name="title_earthquakerecord_detail">EarthQuakeRecord Detail
    </string>
    <string name="list_header_time">Time</string>
    <string name="list_header_place">Place</string>
    <string name="list_header_magnitude">Mag</string>
    <string name="action_set_minimum_magnitude">Set Minimum Magnitude</string>
    <string name="dialog_set_minimum_magnitude">Set Minimum Magnitude</string>
    <string name="dialog_set_button">Set</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="no_records_found">No records found.</string>
    <string name="setting_current_value">Current value</string>
    <string name="date_format_full">yyyy-MM-dd hh:mm aa</string>
    <string name="is_tsunami_yes">YES</string>
    <string name="is_tsunami_no">NO</string>
    <string name="detail_header_time">Time</string>
    <string name="detail_header_place">Place</string>
    <string name="detail_header_magnitude">Magnitude</string>
    <string name="detail_header_tsunami">Is tsunami risk?</string>
    <string name="detail_header_latitude">Latitude</string>
    <string name="detail_header_longitude">Longitude</string>
    <string name="action_refresh_list">Refresh List</string>
    <string name="no_network_connection">No network connection.</string>
    <string name="refreshing_list">Refreshing list &#8230;</string>
    <string name="implementation_missing">must implement MinimumMagnitudeSettingListener!</string>
</resources>
